package tec.poo.simpletron;

public class Terminal {
    public Terminal() {
    }

    public static void main(String[] args) {
        Simpletron LMS = new Simpletron();
        LMS.run();
        System.out.println("Simplretron [version 1.0.0]\n");
    }
}
